# mathuniverse4rust

./: README.md
Rust/: Cargo.toml
Rust/crates/keirin/: Cargo.toml
Rust/crates/keirin/src/: lib.rs  tda.rs
Rust/crates/math_universe_wasm/: Cargo.toml
Rust/crates/math_universe_wasm/src/: lib.rs
Rust/crates/risan/: Cargo.toml
Rust/crates/risan/src/: graph.rs  lib.rs  modular.rs
Rust/crates/ryoshi/: Cargo.toml
Rust/crates/ryoshi/src/: lib.rs  quantum_state.rs
Rust/crates/shinen/: Cargo.toml
Rust/crates/sokudo/: Cargo.toml
Rust/crates/sokudo/benches/: sokudo_bench.rs
Rust/crates/sokudo/src/: process.rs
Rust/crates/zigen/: Cargo.toml
Rust/crates/zigen/src/: dual.rs  lib.rs
Rust/examples/wasm_demo/: index.html
Rust/src/: lib.rs
