[package]
name = "math_universe_sokudo"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = { workspace = true }
rand_distr = "0.4"
num-traits = { workspace = true }
pyo3 = { workspace = true, optional = true }
rayon = { workspace = true }

[dev-dependencies]
criterion = "0.5"

[features]
python = ["dep:pyo3"]

[[bench]]
name = "sokudo_bench"
harness = false
